# WeGetSignal

./: .gitignore  README.md  configure.ac
src/: Makefile.am  fgen.c  fgen.gresource.xml  fgen_app.c  fgen_app.h  fgen_app_window.c  fgen_app_window.h  function-controller.ui  function.c  function.h  function_controller.c  function_controller.h  function_display.c  function_display.h  main-window.ui  signal_function.c  signal_function.h  sin_function.c  sin_function.h  sine.c  sine.h  weighted_sum.c  weighted_sum.h  wgs.c  wgs.gresource.xml  wgs_app.c  wgs_app.h  wgs_app_window.c  wgs_app_window.h
